<resources>
    <string name="app_name">Expenditure Tracker</string>
    <string name="title_activity_login_activity">Login</string>
    <string name="account_tv">Create Account</string>
    <string name="username">Username</string>
    <string name="login_button">Log In</string>
    <string name="splash">Track your expenses</string>
    <string name="intro_tv">The best way to track your expenses</string>
    <string name="lg_text">Log in Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_button">Register</string>
    <string name="tv_account">Don\'t have an Account? Register</string>
    <string name="name">Full name</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="bills">Bills</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_income">Add Income</string>
    <string name="add_category">Add Category</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="no_data">No data</string>
    <string name="error_name">Name must contain alphabets and be 3 characters long.</string>
    <string name="error_username">Username must contain alphanumeric and be 3 characters long.</string>
    <string name="error_input">Must be between 3 to 10 characters long.</string>
    <string name="error_email">Enter a valid email</string>
    <string name="error_fields">All Fields Are Required!</string>
    <string name="error_password">Password must have a minimum of 5 characters and must contain  at
        least a lower case letter, an uppercase letter, a number and a character.
    </string>
    <string name="logout">Logout</string>
</resources>
