<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bills"
        android:title="@string/bills"
        android:enabled="true"
        android:icon="@drawable/ic_bills"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/categories"
        android:title="@string/categories"
        android:enabled="true"
        android:icon="@drawable/ic_categories"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
</menu>