<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/colorPrimary">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="#fff"
            android:text="@string/app_name"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/intro_tv"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usr_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            />

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content" 
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_marginTop="40dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:textColor="#fff"
            android:text="@string/login_button"
            android:drawableRight="@drawable/ic_send_black_24dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>