<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/usr_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="@color/colorAccent"
        android:text="@string/login_button"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_account"
        android:gravity="center"
        />
</LinearLayout>