<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/account_tv"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usr_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/usr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/usr_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/usr_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="40dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:textColor="#fff"
            android:text="@string/register_button"
            />
    </LinearLayout>
</LinearLayout>